responses table overflow display issue

--- a/src/styles/components/_Report.scss
+++ b/src/styles/components/_Report.scss
@@ -284,7 +284,7 @@ $selector-box-shadow: 0 2px 2px #383e40;
     }
   }
   .response-table {
-    table-layout: fixed;
+    table-layout: auto;
     border-collapse: separate;
     border-spacing: 0;
     font-size: 0.9em;
